--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,4 +1,6 @@
 .intro{
+  //background-image: url(https://images.unsplash.com/photo-1552083940-86877723de7a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+  background-size: cover;
   background-color: white;
   display:flex;
 
@@ -9,7 +11,8 @@
     .imgContainer{
       width: 900px;
       height: 900px;
-      background-color: #ebfcf7;
+      background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+      background-size: cover;
       border-radius:50%;
       display:flex;
       align-items:flex-end;
@@ -48,7 +51,7 @@
       font-size:26px;
       span{
         font-size:inherit;
-        color: #fa5ff5;
+        color: #f7101b;
       }
     }
     a{
