--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,3 +1,13 @@
-.portfolio{
-  background-color: lightgray;
+@import "../../global.scss";
+li{
+  font-size: 20px;
+  margin-right: 50px;
+  padding:7px;
+  border-radius: 1px;
+  cursor: pointer;
+  
+    &.active{
+      background-color: #4d2ee8;
+      color:white;
+    }
 }
