--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,102 @@
 .works{
   background-color: beige;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  position:relative;
+
+  .arrow{
+    height: 70px;
+    position:absolute;
+    cursor: pointer;
+
+    &.left {
+      left: 270px;
+      transform: rotateY(180deg);
+    }
+
+    &.right {
+      right: 270px;
+    }
+  }
+
+  .slider{
+    height: 550px;
+    display: flex;
+    position:absolute;
+    left:0;
+      .container{
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .item{
+          width: 1100px;
+          height: 100%;
+          background-color: white;
+          border-radius:20px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .left{
+            flex:4;
+            height: 80%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            .leftContainer{
+              padding-left: 30px;;
+              width: 90%;
+              height: 70%;
+              display: flex;
+              flex-direction: column;
+              justify-content:space-between;
+
+              .imgContainer{
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                background-color: rgb(245, 179, 155);
+                display: flex;
+                align-items: center;
+                justify-content:center;
+              }
+              img{
+                width: 25px;
+               
+              }
+              h2{
+                font-size:30px;
+              }
+              p{
+                font-size:15px;
+              }
+              span{
+                font-size:13px;
+                font-weight:bold;
+                text-decoration: underline;
+                cursor: pointer;
+              }
+            }
+          }
+          .right{
+            flex:8;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img{
+              width: 400px;
+              transform: rotate(-10deg);
+              overflow: hidden;
+            }
+          }
+        }
+      }
+
+  }
 }
