--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,4 +1,80 @@
   
 .testimonials{
   background-color: lightgoldenrodyellow;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1{
+    padding: 40px;
+    font-size: 50px;
+    overflow: hidden;
+  }
+  .container{
+    width: 70%;
+    height: 70%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    
+
+    .card{
+      width: 400px;
+      height: 70%;
+      border-radius: 10px;
+      box-shadow:0px 0px 15px -8px black;
+      display:flex;
+      flex-direction:column;
+      justify-content: space-around;
+      padding: 30px;
+      transition: all 140ms ease;
+
+      &.featured{
+        width: 300px;
+        height: 75%;
+        margin: 0 30px;
+      }
+
+      &:hover{
+        transform: scale(1.1);
+      }
+
+      .top{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+
+        img{
+
+          &.left{
+            height: 25px;
+          }
+
+          &.right{
+            height: 30px;
+          }
+
+          &.user{
+            height: 80px;
+            width: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin: 0 30px;
+          }
+        }
+        
+      }
+      .center{
+        padding:10px;
+        border-radius: 10px;
+        background:#c7e1c0;
+      }
+      .bottom{
+        display: flex;
+        align-items: center;
+        flex-direction:column;
+        justify-content:center;
+      }
+    }
+  }
 }
