--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -25,7 +25,9 @@
             .itemContainer{
                 align-items: center;
                 display: flex;
-            
+                @include mobile{
+                    display:none;
+                  }
                 
                 .icon{
                     font-size: 15px;
