--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -3,12 +3,19 @@
 .contact {
   background-color: white;
   display: flex;
+   @include mobile{
+     flex-direction: column;
+   }
 
     .left{
       flex: 1;
       overflow:hidden;
+      
         img{
           height: 100%;
+          @include mobile{
+           width: 100%;
+          }
         }
     }
     .right{
@@ -34,12 +41,20 @@
           width: 300px;
           height: 30px;
           font-size:14px;
+          @include mobile{
+            width: 200px;
+            height: 20px;
+          }
         }
 
         textarea{
           width: 300px;
           height: 200px;
           font-size:14px;
+          @include mobile{
+            width: 200px;
+            height: 100px;
+          }
         }
 
         button{
