--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,14 +1,24 @@
-  
+ @import "../../global.scss";
+
 .testimonials{
   background-color: lightgoldenrodyellow;
   display:flex;
   flex-direction: column;
   align-items: center;
+  @include mobile{
+    justify-content: space-around;
+  }
+
 
   h1{
     padding: 40px;
     font-size: 50px;
     overflow: hidden;
+
+    @include mobile{
+      font-size: 20px;
+    }
+
   }
   .container{
     width: 70%;
@@ -16,6 +26,11 @@
     display:flex;
     align-items: center;
     justify-content: center;
+
+    @include mobile{
+      flex-direction: column;
+      height: 100%;
+    }
     
 
     .card{
@@ -28,11 +43,25 @@
       justify-content: space-around;
       padding: 30px;
       transition: all 140ms ease;
+      
+      @include mobile{
+        width: 250px;
+        height:180px;
+        margin: 10px 0 ;
+      }
 
       &.featured{
         width: 300px;
         height: 75%;
         margin: 0 30px;
+
+        @include mobile{
+          width: 250px;
+          height: 180px;
+          margin:1px;
+          
+        }
+
       }
 
       &:hover{
@@ -48,10 +77,16 @@
 
           &.left{
             height: 25px;
+            @include mobile{
+              height: 20px;
+            }
           }
 
           &.right{
             height: 30px;
+            @include mobile{
+              height: 25px;
+            }
           }
 
           &.user{
@@ -60,6 +95,11 @@
             border-radius: 50%;
             object-fit: cover;
             margin: 0 30px;
+
+            @include mobile{
+              height: 30px;
+              width: 30px;
+            }
           }
         }
         
@@ -68,13 +108,32 @@
         padding:10px;
         border-radius: 10px;
         background:#c7e1c0;
+        @include mobile{
+          font-size: 10px;
+          padding: 5px;
+        }
+        
       }
       .bottom{
         display: flex;
         align-items: center;
         flex-direction:column;
         justify-content:center;
-      }
+
+        h3{
+          margin-bottom:5px;
+          @include mobile{
+            font-size:14px;
+          }
+        }
+        h4{
+          color:  rgb(121, 115, 115) ;
+          @include mobile{
+            font-size:12px;
+          }
+        }
+
+     }
     }
   }
 }
