--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,4 @@
+@import "../../global.scss";
 .works{
   background-color: beige;
   display:flex;
@@ -9,6 +10,10 @@
     height: 70px;
     position:absolute;
     cursor: pointer;
+
+    @include mobile{
+     display:none;
+    }
 
     &.left {
       left: 270px;
@@ -25,6 +30,14 @@
     display: flex;
     position:absolute;
     left:0;
+    transition:all 1s ease-out;
+
+    @include mobile{
+      height: 100vh;
+      flex-direction:column;
+      justify-content: center;
+     
+     }
       .container{
         width: 100vw;
         display: flex;
@@ -39,6 +52,12 @@
           display: flex;
           align-items: center;
           justify-content: center;
+
+          @include mobile{
+            width: 90%;
+            height: 220px;
+            margin: 10px 0;
+           }
 
           .left{
             flex:4;
@@ -63,16 +82,31 @@
                 display: flex;
                 align-items: center;
                 justify-content:center;
+
+                @include mobile {
+                  width: 20px;
+                  height: 20px;
+                }
+
               }
               img{
                 width: 25px;
+                @include mobile {
+                  width: 15px;
+                }
                
               }
               h2{
                 font-size:30px;
+                @include mobile {
+                  font-size:13px;
+                }
               }
               p{
                 font-size:15px;
+                @include mobile {
+                  display:none;
+                }
               }
               span{
                 font-size:13px;
