--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -2,7 +2,7 @@
 .menu{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: #f6f6f6;
     position: fixed;
     top: 0;
     right: -100%;
@@ -23,8 +23,8 @@
         padding:0;
         list-style:none;
         font-size:40px;
-        color:white;
-        width: 60%;
+        color:black;
+        width: 100%;
 
         li {
          margin-bottom:30px;
