--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,13 +1,19 @@
 @import "../../global.scss";
+a {
+    font-family: 'Forum', cursive;
+    font-weight: 400;
+    color: #000000;
+}
 .topbar{
     width: 100%;
     height: 90px;
     position: fixed;
     background-color:white;
-    color: $mainColor;
+    color: #000000;
     z-index: 3;
     top: 0;
-    transition: all 0.2s ease;
+    transition: all 140ms ease;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
     
     
     .wrapper{    
@@ -20,7 +26,9 @@
             align-items:center;
             .logo{
                 margin-right: 5px;
-                font-size: 25px;font-weight:700;text-decoration: none; color:#4d2ee8;
+                font-size: 25px;
+                font-weight:700;
+                text-decoration: none; 
             }
             .itemContainer{
                 align-items: center;
@@ -31,7 +39,6 @@
                 
                 .icon{
                     font-size: 15px;
-                    color: #4d2ee8;
                     text-decoration: none;
                     margin-right: 5px;
                    
@@ -39,7 +46,7 @@
                 span{
                     font-size: 15px;
                     font-weight: 500;
-                    color: #4d2ee8;
+                    color: #000000;
                 }
             }
         }
@@ -48,7 +55,7 @@
     
             .hamburger{
                 width: 45px;
-                height: 25px;
+                height: 1.5em;
                 display:flex;
                 flex-direction: column;
                 justify-content: space-between;
@@ -56,30 +63,31 @@
                 span{
                     width: 100%;
                     height: 2px;
-                    background-color: #4d2ee8;
+                    background-color: #000000;
                     transform-origin: left;
                     transition: all 140ms ease;
                 }
             }
         }
+    
     }
 
     &.active{
-        background-color:#000000;
+        background-color:#f6f6f6;
         opacity: 0.9;
-        color: #4d2ee8;
+        color: #000000;
         
         .hamburger{
             span{
                 &:first-child {
-                    background-color: #4d2ee8;
+                    background-color: #000000;
                     transform: rotate(45deg);
                   }
-                  &:nth-child(2) {
-                    opacity: 0;
-                  }
+                //   &:nth-child(2) {
+                //     opacity: 0;
+                //   }
                   &:last-child {
-                    background-color: #4d2ee8;
+                    background-color: #000000;
                     transform: rotate(-45deg);
                   }
             }
