--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s ease;
+    transition: all 0.7s ease;
     text-align: center;
 
     &.active {
@@ -19,7 +19,7 @@
     }
 
     ul{
-        margin:0;
+        margin-top:1.5em;
         padding:0;
         list-style:none;
         font-size:40px;
@@ -27,15 +27,15 @@
         width: 100%;
 
         li {
-         margin-bottom:30px;
+         margin-bottom:35px;
          a {
-            font-size:inherit;
+            font-size:1em;
             color:inherit;
             text-decoration:none;
            }
         
         &:hover{
-            font-weight:800;
+            font-weight:700;
             color:#4d2ee8;
         }
         
