--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,96 +1,103 @@
-@import "../../global.scss";
+// @import "../../global.scss";
 
-.portfolio {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+// .portfolio {
+//   background-color: white;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
 
-  h1 {
-    font-size: 50px;
+//   h1 {
+//     margin-top:2em;
+//     font-size: 50px;
 
-    @include mobile{
-      font-size: 20px;
-    }
-  }
+//     @include mobile{
+//       font-size: 2em;
+//     }
+//   }
 
-  ul {
-    margin: 10px;
-    padding: 0;
-    list-style: none;
-    display: flex;
+//   ul {
+//     // margin: 20px;
+//     padding: 0;
+//     list-style: none;
+//     display: flex;
 
-    @include mobile{
-      margin: 10px 0;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
+//     @include mobile{
+//       margin: 10px 0;
+//       flex-wrap: wrap;
+//       justify-content: center;
+//     }
 
-    li{
-      font-size: 20px;
-      margin-right: 50px;
-      padding:7px;
-      border-radius: 1px;
-      cursor: pointer;
+//     li{
+//       font-size: 1.5rem;
+//       padding:7px;
+//       cursor: pointer;
+//       margin-bottom: 1em;
+     
       
-        &.active{
-          background-color: #4d2ee8;
-          color:white;
-        }
-    }
+      
+//         &.active{
+//           border-bottom: 1px solid black;
+//           color:black;
+//         }
+//     }
    
-  }
+//   }
 
-  .container {
-    width: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+//   .container {
+//     width: 70%;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     flex-wrap: wrap;
 
-    @include mobile{
-      width: 100%;
-    }
+//     @include mobile{
+//       width: 100%;
+//     }
 
-    .item {
-      width: 400px;
-      height: 300px;
-      border-radius: 20px;
-      border: 1px solid rgb(240, 239, 239);
-      margin: 10px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      position: relative;
-      transition: all .5s ease;
-      cursor: pointer;
+//     .item {
+//       width: 400px;
+//       height: 300px;
+//       border-radius: 20px;
+//       border: 1px solid rgb(240, 239, 239);
+//       margin: 10px 20px;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       color: white;
+//       position: relative;
+//       transition: all .5s ease;
+//       cursor: pointer;
 
-      @include mobile{
-        width: 130px;
-        height: 100px;
-      }
+//       @include mobile{
+//         width: 130px;
+//         height: 100px;
+//       }
 
 
-      h3 {
-        position: absolute;
-        font-size: 20px;
-      }
+//       h3 {
+//         position: absolute;
+//         font-size: 20px;
+//       }
 
-      img {
-        width: 65%;
-        height: 100%;
-        object-fit: cover;
-        z-index: 1;
-      }
+//       img {
+//         width: 65%;
+//         height: 100%;
+//         object-fit: cover;
+//         z-index: 1;
+//       }
 
-      &:hover {
-        background-color: #4d2ee8;
-        img {
-          opacity: 0.2;
-          z-index: 0;
-        }
-      }
-    }
-  }
-}
+//       &:hover {
+//         background-color: #4d2ee8;
+//         img {
+//           opacity: 0.2;
+//           z-index: 0;
+//         }
+//       }
+//     }
+//   }
+// }
+
+
+
+
+
