--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,16 +1,16 @@
-@import "../../global.scss";
-li{
-  font-size: 20px;
-  margin-right: 50px;
-  padding:7px;
-  border-radius: 1px;
-  cursor: pointer;
-  @include mobile{
-    margin-right:20px;
-  }
+// @import "../../global.scss";
+// li{
+//   font-size: 20px;
+//   margin-right: 50px;
+//   padding:7px;
+//   border-radius: 1px;
+//   cursor: pointer;
+//   @include mobile{
+//     margin-right:20px;
+//   }
   
-    &.active{
-      background-color: #4d2ee8;
-      color:white;
-    }
-}
+//     &.active{
+//       border-bottom: 1px solid black;
+//       color:white;
+//     }
+// }
