--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,12 +1,12 @@
 @import "../../global.scss";
 a {
     font-family: 'Forum', cursive;
-    font-weight: 400;
+    font-weight: 700;
     color: #000000;
 }
 .topbar{
     width: 100%;
-    height: 90px;
+    height: 100px;
     position: fixed;
     background-color:white;
     color: #000000;
@@ -16,9 +16,8 @@ a {
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
     overflow: hidden;
     
-    
-    .wrapper{    
-        padding: 30px 30px;
+    .wrapper{     
+        padding: 30px 40px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -27,7 +26,7 @@ a {
             align-items:center;
             .logo{
                 margin-right: 5px;
-                font-size: 25px;
+                font-size: 2.5em;
                 font-weight:700;
                 text-decoration: none; 
             }
@@ -39,13 +38,15 @@ a {
                   }
                 
                 .icon{
-                    font-size: 15px;
+                    
+                    font-size: 0.95rem;
                     text-decoration: none;
                     margin-right: 5px;
                    
                 }
                 span{
-                    font-size: 15px;
+                    padding-bottom: 5px;
+                    font-size: 1.2rem;
                     font-weight: 500;
                     color: #000000;
                 }
