--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -6,6 +6,7 @@
     // flex-direction: column;
     text-align: center;
     margin:0;
+
     @include mobile {
       margin: 1em;
       text-align: left;
@@ -71,7 +72,10 @@
 /***********      Layout        **************/
     main {
       width: 90%;
+      height: 100%;
       max-width: 900px; 
      margin: 0 auto;
+     overflow: hidden;
     }
+    
 }
