--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,102 +1,112 @@
-// @import "../../global.scss";
+@import "../../global.scss";
 
-// .portfolio {
-//   background-color: white;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
+.portfolio {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 
-//   h1 {
-//     margin-top:2em;
-//     font-size: 50px;
 
-//     @include mobile{
-//       font-size: 2em;
-//     }
-//   }
+  h1 {
+    margin-top:1em;
+    font-size: 2rem;
+    overflow: hidden;
 
-//   ul {
-//     // margin: 20px;
-//     padding: 0;
-//     list-style: none;
-//     display: flex;
+    @include mobile{
+      font-size: 1.5em;
+    }
+  }
 
-//     @include mobile{
-//       margin: 10px 0;
-//       flex-wrap: wrap;
-//       justify-content: center;
-//     }
+  ul {
+    // margin: 20px;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    overflow: hidden;
+    text-align: center;
 
-//     li{
-//       font-size: 1.5rem;
-//       padding:7px;
-//       cursor: pointer;
-//       margin-bottom: 1em;
+    @include mobile{
      
+      //margin: 10px 0;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    li{
+      font-size: 1.5rem;
+      cursor: pointer;
+      margin-bottom: 1em;
+      text-align: center;
       
-      
-//         &.active{
-//           border-bottom: 1px solid black;
-//           color:black;
-//         }
-//     }
+        &.active{
+          border-bottom: 1px solid black;
+          color:black;
+        }
+        @include mobile {
+          font-size: 1rem;
+        }
+    }
    
-//   }
+  }
 
-//   .container {
-//     width: 70%;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     flex-wrap: wrap;
+  .container {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    scrollbar-color: pink;
+    @include mobile{
+      width: 100%;
+      height: 70%;
+    }
 
-//     @include mobile{
-//       width: 100%;
-//     }
+    .item {
+      width: 400px;
+      height: 300px;
+      border-radius: 20px;
+      border: 1px solid rgb(240, 239, 239);
+      margin: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      position: relative;
+      transition: all .5s ease;
+      cursor: pointer;
+      overflow: hidden;
 
-//     .item {
-//       width: 400px;
-//       height: 300px;
-//       border-radius: 20px;
-//       border: 1px solid rgb(240, 239, 239);
-//       margin: 10px 20px;
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       color: white;
-//       position: relative;
-//       transition: all .5s ease;
-//       cursor: pointer;
-
-//       @include mobile{
-//         width: 130px;
-//         height: 100px;
-//       }
+      @include mobile{
+        width: 400px;
+        height: 230px;
+      }
 
 
-//       h3 {
-//         position: absolute;
-//         font-size: 20px;
-//       }
+      h3 {
+        overflow: hidden;
+        position: absolute;
+        font-size: 3rem;
+        text-align: center;
+      }
 
-//       img {
-//         width: 65%;
-//         height: 100%;
-//         object-fit: cover;
-//         z-index: 1;
-//       }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 1;
+      }
 
-//       &:hover {
-//         background-color: #4d2ee8;
-//         img {
-//           opacity: 0.2;
-//           z-index: 0;
-//         }
-//       }
-//     }
-//   }
-// }
-
+      &:hover {
+        background-color: black;
+        img {
+          opacity: 0.2;
+          z-index: 0;
+        }
+      }
+    }
+  }
+}
 
 
 
