--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -8,8 +8,8 @@
     margin:0;
 
     @include mobile {
-      margin: 1em;
-      text-align: left;
+       margin-bottom:1em;
+       height: 100%;
     }
 /***********      Typography        **************/
   p,h2,h3,span,strong 
@@ -17,11 +17,11 @@
     font-family: 'Roboto Mono';
   }
   h1 {
-    margin-top:1em;
+    margin-top:1.5em;
     font-size:3rem;
     color: white;  
     @include mobile {
-      font-size: 2rem;
+      font-size: 1.2rem;
       text-align: center;
     }
     
@@ -34,7 +34,7 @@
     margin-top: 1.2em;
     
     @include mobile {
-      font-size: 1rem;
+      font-size: 0.9rem;
       margin-bottom: 1em;
       margin-top: 1.2em;
     }
@@ -47,7 +47,7 @@
     font-weight: 200;
 
     @include mobile {
-      font-size: 0.85rem;
+      font-size: 0.65rem;
       margin-bottom: 0.5em;
     }
 
@@ -71,10 +71,10 @@
 /**********************************************/
 /***********      Layout        **************/
     main {
-      width: 90%;
+      width: 100%;
       height: 100%;
-      max-width: 900px; 
-     margin: 0 auto;
+      //max-width: 900px; 
+     //margin: 0 auto;
      overflow: hidden;
     }
     
