--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,6 +1,6 @@
 @import "../../global.scss";
 .works{
-  background-color: beige;
+  background:black;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -47,7 +47,8 @@
         .item{
           width: 1100px;
           height: 100%;
-          background-color: white;
+          background: radial-gradient(50% 50% at 50% 50%, rgba(235, 255, 0, 0.2) 0%, rgba(0, 163, 255, 0.162) 100%), radial-gradient(50% 50% at 50% 50%, rgba(0, 255, 133, 0.1728) 0%, rgba(141, 255, 239, 0.1344) 73.96%, rgba(230, 79, 255, 0.1536) 100%), linear-gradient(180deg, #EED9FF 0%, #F366FF 100%);
+          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
           border-radius:20px;
           display: flex;
           align-items: center;
@@ -60,7 +61,7 @@
            }
 
           .left{
-            flex:4;
+            flex:8;
             height: 80%;
             display: flex;
             align-items: center;
@@ -78,7 +79,6 @@
                 width: 60px;
                 height: 60px;
                 border-radius: 50%;
-                background-color: rgb(245, 179, 155);
                 display: flex;
                 align-items: center;
                 justify-content:center;
@@ -97,7 +97,9 @@
                
               }
               h2{
-                font-size:30px;
+                font-size:96px;
+                color: #ADFFBF;
+                text-shadow: 0px 4px 4px rgba(255, 0, 122, 0.25);
                 @include mobile {
                   font-size:13px;
                 }
@@ -117,7 +119,7 @@
             }
           }
           .right{
-            flex:8;
+            flex:4;
             height: 100%;
             display: flex;
             align-items: center;
