--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -19,18 +19,20 @@
     }
 
     ul{
-        margin-top:1.5em;
-        padding:0;
+        margin-top:4em;
         list-style:none;
         color:black;
         width: 100%;
-
+        padding: 0 0 0 0 ;
         li {
-         margin-bottom:35px;
-         a {
-            font-size:4rem;
+          margin-bottom: 2.5em;
+          a {
+            font-size:2.5em;
             color:inherit;
             text-decoration:none;
+            @include mobile {
+              font-size: 1.8em;
+            }
            }
         
         &:hover{
@@ -38,7 +40,7 @@
             color:#4d2ee8;
         }
         @include mobile {
-          margin-bottom:0.2em;
+          margin-bottom:0em;
         }
         
     }
@@ -53,21 +55,28 @@
 .itemContainer {
   display:none;
   // .icon,
-  // span {
-  //   display:none;
+  //  span{
+  // display:none;
   // }
+   
   @include mobile{
     align-items: center;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    margin-top: -1rem;
     .icon {
       font-size: 1.1rem;
       text-decoration: none;
     }
     span{
-      font-size: 1.2rem;
-      font-weight: 500;
+      font-size: 1rem;
+      // font-weight: 500;
+      //font-family: 'Forum', cursive;
+      logo {
+        font-weight: 700;
+        font-family: 'Forum', cursive;
+      }
     }
   }
 }
