--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -22,22 +22,22 @@
     color: white;  
     @include mobile {
       margin-top:1.5em;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       text-align: center;
     }
     
   }
 
   h2{
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     color: white;
     margin-bottom: 1em;
-    margin-top: 1.2em;
+    margin-top: 0.5em;
     
     @include mobile {
       font-size: 0.9rem;
       margin-bottom: 1em;
-      margin-top: 1.2em;
+      margin-top: 0.2em;
     }
 
   }
@@ -49,7 +49,7 @@
 
     @include mobile {
       font-size: 0.65rem;
-      margin-bottom: 0.5em;
+      margin-bottom: 0.6em;
     }
 
   }
@@ -59,7 +59,21 @@
     font-style: italic;
     @include mobile {
       font-size: 0.75rem;
-      margin-bottom: 1em;
+      margin-bottom: 0.5em;
+    }
+    ul{
+      @include mobile { display: flex;flex-direction: column;padding-left:0px; margin-top: -1em;}
+      li{
+        a{
+         
+          font-size: 0.9rem;
+          text-decoration: none;
+          border-width: 50;
+          border: 5px solid #4d2ee8;
+          border-radius:60%;
+          background-color:#4d2ee8;
+        }
+      }
     }
   }
   span{
@@ -68,7 +82,7 @@
       font-size: 0.7rem;
     }
   }
-
+ 
 /**********************************************/
 /***********      Layout        **************/
     main {
