--- a/src/components/letter/letter.scss
+++ b/src/components/letter/letter.scss
@@ -4,28 +4,43 @@
   background-size: cover;
   background-color: white;
   display:flex;
-  justify-content: flex-end;
+  h1 {
+    font-family: 'Poppins', sans-serif;
+    span{
+      font-family: 'Playfair Display', serif;
+    }
+  }
+  h2{
+    margin-top:2.5em;
+    font-family: 'Poppins', sans-serif;
+    @include mobile{
+      margin-top:0.5;
+    }
+  }
+  p{
+    font-size: 1.2rem;
+    @include mobile{
+     font-size: 1rem;
+    }
+  }
+  h3{
+   @include mobile{
+     line-height: 0.75rem;
+     font-size: 0.8rem;
+   }
+  }
+
+  @include mobile{
+    flex-direction: column;
+    display: inline-block;
+    margin: 0 auto;
+    
+  }
   
-  .left{
+    .left{
     flex:0.3;
     margin:2em;
     overflow: hidden;
-    @include mobile{
-      flex: 0;
-        }
-      h1 {
-        font-family: 'Poppins', sans-serif;
-        span{
-          font-family: 'Playfair Display', serif;
-        }
-      }
-      h2{
-        margin-top:2.5em;
-        font-family: 'Poppins', sans-serif;
-      }
-      p{
-        font-size: 1.2rem;
-      }
       img{
         justify-content:space-between;
         align-items: center;
@@ -35,6 +50,19 @@
         width:90%;
         height:70%;
         object-fit: cover;
+        @include mobile{
+        margin: 2em 0  0 5em;
+        width:70%;
+        height:50%;
+        }
+      }
+      @include mobile{
+      flex-direction:column;
+      width: 100%;
+      flex:1;
+       padding-top: 2rem;
+       font-size: 0.5rem;
+       
       }
   }
   .right{
@@ -42,17 +70,12 @@
      padding-top:1em;
      justify-content: space-between;
      margin:3em 4.5em 0 0;
-    margin-bottom:0;
-     @include mobile{
-       flex: 1;
-       margin:1em 1em 0 0;
-     }
+     margin-bottom:0;
     
      h3{
        padding-bottom: 1em;
-       @include mobile{
-        padding-top: 1em;
-        font-size: 0.8rem;
+      @include mobile{
+        font-size: 1rem;
       }
       
      }
@@ -62,23 +85,38 @@
        text-align: left;
        margin-right:5em;
        @include mobile{
-        font-size: 0.7rem;
-        margin-right:1em;
+        font-size: 0.8rem;
+        margin-right:2em;
       }
        
      }
      footer{
       padding-top:300px;
+      @include mobile {
+        padding-top: 0px;   
+        padding-bottom: 5em;
+        margin-right:3em;
+        
+      }
       .contact{
         display: flex;
         overflow: hidden;
         float: right;
+
         .tel{
           flex-direction: column;
           padding-top:35px;
+          @include mobile {
+            padding-top:25px;
+          }
+         
           h3{
             line-height: 15px;
             font-size: 1rem;
+            @include mobile {
+              font-size: 0.7rem; 
+              line-height:7px;
+             }
           }
         }
          .imgContainer{
@@ -90,13 +128,32 @@
             width: 100%;
             object-fit: cover;
           }
+          @include mobile {
+          width:50px;
+          height:50px;
+           }
          }
          span{
           padding-top:40px;
           line-height: 20px;
+          @include mobile {
+            font-size: 0.75rem;
+          padding-top:20px;
+          line-height: 13px;
+             }
          }
+       
        }
+       
+
+      }
+      @include mobile{
+       display:flex;
+       flex-direction: column;
+       padding-top:4em;
+       margin:2em 0 0 4em;
+       font-size: 0.5rem;
      }
-    
+      
   }
 }
