--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -32,6 +32,7 @@
             text-decoration:none;
             @include mobile {
               font-size: 1.8em;
+              line-height: 2.5em;
             }
            }
         
