--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -38,7 +38,7 @@
         
         &:hover{
             font-weight:700;
-            color:#4d2ee8;
+            color: #0000F0;
         }
         @include mobile {
           margin-bottom:0em;
