--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .resume {
-    background-color: rgb(0, 0, 0);
+   background-color:  white;
     display: flex;
     // flex-direction: column;
     text-align: center;
@@ -19,7 +19,7 @@
   h1 {
     margin-top:1em;
     font-size:3rem;
-    color: white;  
+    color: black;  
     @include mobile {
       margin-top:1.5em;
       font-size: 1.3rem;
@@ -30,7 +30,7 @@
 
   h2{
     font-size: 1.5rem;
-    color: white;
+    color: #000000;
     margin-bottom: 1em;
     margin-top: 0.5em;
     
@@ -44,7 +44,8 @@
 
   h3 {
     font-size: 1.25rem;
-    color: #d0d0d0;
+    //color: #d0d0d0;
+    color: #0000F0;
     font-weight: 200;
 
     @include mobile {
@@ -55,29 +56,30 @@
   }
   
   p{
-    color: #4d2ee8;
+    color: #0000F0;
     font-style: italic;
     @include mobile {
       font-size: 0.75rem;
       margin-bottom: 0.5em;
     }
-    ul{
-      @include mobile { display: flex;flex-direction: column;padding-left:0px; margin-top: -1em;}
-      li{
-        a{
+    // ul{
+    //   @include mobile { display: flex;flex-direction: column;padding-left:0px; margin-top: -1em;}
+    //   li{
+    //     a{
          
-          font-size: 0.9rem;
-          text-decoration: none;
-          border-width: 50;
-          border: 5px solid #4d2ee8;
-          border-radius:60%;
-          background-color:#4d2ee8;
-        }
-      }
-    }
+    //       font-size: 0.9rem;
+    //       text-decoration: none;
+    //       border-width: 50;
+    //       border: 5px solid #4d2ee8;
+    //       border-radius:60%;
+    //       background-color:#4d2ee8;
+    //     }
+    //   }
+    // }
   }
   span{
-    color: #c2c1c1;
+    //color: #c2c1c1;
+    color:black;
     @include mobile {
       font-size: 0.7rem;
     }
@@ -91,6 +93,7 @@
       //max-width: 900px; 
      //margin: 0 auto;
      overflow: hidden;
+
     }
     
 }
