--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,10 @@ a {
     font-family: 'Forum', cursive;
     font-weight: 700;
     color: #000000;
+    text-decoration: none;
 }
+
+
 .topbar{
     width: 100%;
     height: 100px;
@@ -50,6 +53,7 @@ a {
                     font-weight: 500;
                     color: #000000;
                 }
+               
             }
         }
         
