--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -13,6 +13,10 @@
     justify-content: center;
     transition: all 0.7s ease;
     text-align: center;
+    @include mobile{
+      width: 100%;
+      right: -100%;
+    }
 
     &.active {
       right: 0;
