--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -38,10 +38,13 @@
     input{
       width: 550px;
       height: 30px;
-      font-size:14px;
+      font-size:1.3em;
+      padding:5px;
       @include mobile{
         width: 230px;
-        height: 30px;
+        height: 25px;
+        font-size:1rem;
+        padding:3px;
       }
     }
     label{
@@ -54,10 +57,15 @@
     textarea{
       width: 550px;
       height: 200px;
-      font-size:14px;
+      font-size:1.3em;
+      padding:10px;
+      line-height:23px;
       @include mobile{
         width: 230px;
         height: 100px;
+        font-size: 1rem;
+        padding:8px;
+        line-height:19px;
       }
     }
 
