update card material ui

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,7 +6,7 @@
         width: 100%;
         top: 90px;
         height: calc(100vh - 90px);
-        background-color: black;
+        background-color: white;
         position: relative;
         top: 90px;
         scroll-behavior: smooth;
