swap  portfolio, card

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,38 +1,14 @@
 @import "../../global.scss";
-  .card{
+  .main{
+    padding-top:8em;
+    margin-bottom:2em;
     background-size: cover;
     background-color: white;
-    // align-items: center;
-    // display: flex;
-    // flex-direction: column;
-    // overflow: hidden;
-    
-    // h1{
-    //   margin:1.75em;
-    //   font-size: 2em;
-    //   overflow: hidden;
-    //   @media (max-width: 480px){
-    //   padding: 50px 0px;
-    //    font-size: 1.5rem;
-    //    margin: 0%;
-    //   }
-    // }
-    //       .cardContainer {
-    //           width: 30%;
-    //           height: 250px;
-    //           display: flex;
-    //           text-align: center;
-    //           flex-direction: column;
-    //           -webkit-box-align: center;
-    //           justify-content: space-between;
-    //           margin-bottom: 1em;
-    //           border: 1px solid black;
-    //           max-width:800px;
-    //           @include mobile{
-    //             width: 80%;
-    //           }
-    //       }
-            
-              
-            
+    width: 60%;
+    text-align: center;          
+    //align-items: center;
+    @include mobile{
+      padding-top:60px;
+      margin-bottom:2em;
+    }
   }
