--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -35,11 +35,14 @@
     align-items: center;
     justify-content: space-around;
     overflow: hidden;
+    
     input{
       width: 550px;
       height: 30px;
       font-size:1.3em;
+      border-color: transparent;
       padding:5px;
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
       @include mobile{
         width: 230px;
         height: 25px;
@@ -55,6 +58,8 @@
     }
 
     textarea{
+      border-color: transparent;
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
       width: 550px;
       height: 200px;
       font-size:1.3em;
@@ -75,7 +80,7 @@
       height: 30px;
       cursor: pointer;
       overflow: hidden;
-      font-family: 'Roboto Mono';
+      font-family: 'Roboto Mono'; 
 
       &:focus{
         outline:none;
