--- a/src/app.scss
+++ b/src/app.scss
@@ -5,8 +5,9 @@
     .sections{
         width: 100%;
         top: 90px;
-        height: calc(100vh - 90px);
-        background-color: white;
+        background-color: #f6f6f6;
+       
+        background-blend-mode: screen;
         position: relative;
         top: 90px;
         scroll-behavior: smooth;
