--- a/src/components/letter/letter.scss
+++ b/src/components/letter/letter.scss
@@ -2,7 +2,7 @@
 
 .letter {
   background-size: cover;
-  background-color: white;
+  background-color: $mainColor;
   display:flex;
   ul{
     padding-inline-start: 0px;
