--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,6 +1,6 @@
 @import "../../global.scss";
 .works{
-  background:black;
+  background:$mainColor;
   display:flex;
   align-items:center;
   justify-content:center;
