--- a/src/components/cardbox/cardbox.scss
+++ b/src/components/cardbox/cardbox.scss
@@ -1,14 +1,14 @@
 @import "../../global.scss";
 
 .cardbox {
-  background-color: white;
+  background-color: $mainColor;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
   /*******************Typography *********************************************/
   h1 {
-    margin-top:1em;
+    margin-top:3em;
     font-size: 2rem;
     overflow: hidden;
     padding-top:40px;
@@ -58,8 +58,8 @@
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
-        margin-bottom:5em;
-  
+        margin-bottom:1em;
+
   
       @include mobile{
         width: 80%;
@@ -70,7 +70,7 @@
 
         .item {
           padding-top: 3em;
-          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
           background-color:rgb(238, 238, 238);
           width: 350px;
           height: 250px;
@@ -94,6 +94,9 @@
           &:hover {
             background-color: black;
             color: rgb(238, 238, 238);
+            transform: scale(1.07);
+            
+           
             img {
               opacity: 0.2;
               z-index: 0;
