--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
-.contact {
-  background-color: white;
+.contact-mail {
+  background-color: $mainColor;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -23,10 +23,28 @@
     font-family: 'Roboto Mono';
     font-style: italic;
     @include mobile{
-      font-size: 0.65rem;
+      font-size: 0.5em;
       overflow: hidden;
+      text-align: center;
+      padding-left: 50px;
+      padding-right: 50px;
+      margin-top: -1em;
     }
   }
+  span{
+    padding-top: 20px;
+    font-family: 'Roboto Mono';
+    color:#0000F0;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 3px #e60073, 0 0 3px #e60073, 0 0 8px #e60073;
+    font-size: 1.5em !important;
+    @include mobile{
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 1.5px #e60073, 0 0 1.5px #e60073, 0 0 5px #e60073;
+    font-size: 1em !important;
+    }
+   
+  }
+
+
   form{
     width: 95%;
     height: 80%;
@@ -42,7 +60,7 @@
       font-size:1.3em;
       border-color: transparent;
       padding:5px;
-      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
+      box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
       @include mobile{
         width: 230px;
         height: 25px;
@@ -59,7 +77,7 @@
 
     textarea{
       border-color: transparent;
-      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
+      box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
       width: 550px;
       height: 200px;
       font-size:1.3em;
