--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 .intro{
   background-size: cover;
-  background-color: white;
+  background-color: $mainColor;
   display:flex;
   flex-direction: column;
   // margin:1em auto;
@@ -78,7 +78,7 @@
       display:flex;
       align-items:center;
       justify-content:center;
-  
+     
       @include mobile{
         height: 50%;
         align-items:center;
@@ -87,6 +87,7 @@
       img{
         height: 100%;
         object-fit: cover;
+       
 
         @include mobile{
           height: 100%;
