--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: all 0.7s ease;
+    transition: all 140ms ease-out;
     text-align: center;
     @include mobile{
       width: 100%;
@@ -20,6 +20,8 @@
 
     &.active {
       right: 0;
+      box-shadow: 0px 0px 0px 1500px rgba(0, 0, 0, 0.94);
+      
     }
 
     ul{
@@ -35,8 +37,8 @@
             color:inherit;
             text-decoration:none;
             @include mobile {
-              font-size: 1.8em;
-              line-height: 2.5em;
+              font-size: 1.9em;
+              line-height: 1.95em;
             }
            }
         
