--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .resume {
-   background-color:  white;
+   background-color:  $mainColor;
     display: flex;
     // flex-direction: column;
     text-align: center;
