--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -11,7 +11,8 @@ a {
     width: 100%;
     height: 100px;
     position: fixed;
-    background-color:white;
+    background-color:rgba(255, 255, 255, 0.933);
+    // opacity: 0.9;
     color: #000000;
     z-index: 3;
     top: 0;
