--- a/src/components/cardbox/cardbox.scss
+++ b/src/components/cardbox/cardbox.scss
@@ -19,13 +19,14 @@
   h5 {
     font-family: 'Forum';
     font-size: 1.5rem;
-    //padding:0.5em;
     text-align: center;
     margin: 0.5em;
     padding-left: 1em;
     padding-right: 1em;
+    margin-top: -1em;
     @include mobile{
-      font-size: 1.2rem;
+      font-size: 1rem;
+     
     }
     
   }
@@ -35,7 +36,7 @@
     margin: 1em;
     @include mobile{
       font-size: 0.7rem;
-     // padding-top: 2rem;
+     
     }
 
   }
@@ -48,6 +49,10 @@
     font-weight:bolder;
     padding-left: 20px;
     padding-right: 20px;
+    @include mobile{
+      font-size: 0.6em;
+      margin-top: -6em;
+    }
   }
   /****************************************************************/
   
@@ -62,9 +67,8 @@
 
   
       @include mobile{
-        width: 80%;
-        height: 90%;
-        display: flex;
+        width: 100%;
+        height: 100%;
       }
 
 
@@ -88,8 +92,9 @@
          
     
           @include mobile{
-            width: 400px;
-            height: 230px;
+            width: 35%;
+            height: 23%;
+            
           }
           &:hover {
             background-color: black;
