--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -12,11 +12,40 @@
   h1 {
     font-size: 2rem;
     overflow: hidden;
+    padding-bottom: 40px;
     @include mobile{
-      font-size: 1.5em;
+      font-size: 1.8em;
     }
   }
-/*****Typography********************************/
+  h3{
+    font-size: 1em;
+    overflow: hidden;
+    font-family:'Roboto Mono';
+    color:#0000F0;
+    @include mobile{
+      font-size: 0.9em;
+    }
+  }
+  h5{
+    overflow: hidden;
+    width: 100%;
+    font-size: 1em;
+    font-weight: lighter;
+    font-family:'Roboto Mono';
+    @include mobile{
+      font-size: 0.9em;
+    }
+  }
+  p{
+    font-size: 0.8rem;
+    margin:0.5em 0;
+    color:  #acacac;
+    font-family:'Roboto Mono';
+    @include mobile{
+      font-size: 0.7em;
+    }
+  }
+/*****T********Layout************************/
   head{
     width: 70%;
     display:flex;
@@ -24,15 +53,15 @@
     flex-direction: column;
   }
   main{
-   // margin-top:7em;
     width: 70%;
-    height:40%;
+    height:60%;
     display: flex;
     align-items: center;
     justify-content: center;
-    //flex-direction: row;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
     @include mobile{
-      width:100%;
+      width:80%;
+      height:60%;
     }
     
     .left{
@@ -47,19 +76,7 @@
         padding-left:100px;
         align-items: center;
         margin:0;     
-        // // margin: 20px;
-        // padding: 0;
-        // list-style: none;
-        // display: flex;
-        // overflow: hidden;
-        // text-align: center;
-    
-        // @include mobile{
-        
-        //   //margin: 10px 0;
-        //   flex-wrap: wrap;
-        //   justify-content: center;
-        // }
+
         @include mobile{
           width:80%;
           margin-left:0;
@@ -71,21 +88,24 @@
     .right {
       flex:0.4;
       display:relative;
+      
       @include mobile{
         flex:0.6;
         display:flex;
         justify-content: center;
       }
       .container {
-        width: 50%;
-        margin-left:4em;
+        width: 70%;
+        height: 100%;
+        margin-top:3em;
+        margin-left:7em;
         display: flex;
-        align-items: center;
         justify-content: center;
-        flex-wrap: wrap;
-        scrollbar-color: pink;
+        flex-direction: column;
+        line-height: 20px;
         @include mobile{
           width:80%;
+          margin-top:0.8em;
          margin-left:0;
         }
       }
