--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -21,6 +21,7 @@
     &.active{
       border-left: 2px solid black;
       color: #0000f0;
+      font-weight:bolder;
       background-color:rgb(238, 238, 238);
     }
   }
