--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -10,6 +10,7 @@
   margin: -5em 5em 0 0;
 /*****Typography********************************/
   h1 {
+    color:black;
     font-size: 2rem;
     overflow: hidden;
     padding-bottom: 40px;
@@ -45,6 +46,12 @@
       font-size: 0.7em;
     }
   }
+  a{
+    color:#0000F0;
+    padding-left: 0.2em;
+   font-size: 1.2em;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 0.1px #0000F0, 0 0 0.1px #0000F0, 0 0 4px #f0008c;
+  }
 /*****T********Layout************************/
   head{
     width: 70%;
@@ -58,7 +65,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.10);
     @include mobile{
       width:80%;
       height:60%;
@@ -106,7 +113,7 @@
         @include mobile{
           width:80%;
           margin-top:0.8em;
-         margin-left:0;
+         margin-left:2em;
         }
       }
     }
