--- a/src/components/letter/letter.scss
+++ b/src/components/letter/letter.scss
@@ -117,9 +117,9 @@
         @media (max-width: 775px){
           float:right;
           margin-right:4.5em;
-          margin-top: -16em;
-          width:45%;
-          height:100%;
+          margin-top: -14em;
+          width:48%;
+          height:90%;
         }
       }
       @include mobile{
@@ -172,9 +172,11 @@
         margin-right:2em;
       }
       @media (max-width: 775px){
+        //margin-bottom:0.3rem;
+        line-height: 14px;
         margin-right:0;
         width: 95%;
-        font-size: 1.1em;
+        font-size: 1em;
         overflow: hidden;
        }
        
