--- a/src/components/letter/letter.scss
+++ b/src/components/letter/letter.scss
@@ -118,7 +118,7 @@
           float:right;
           margin-right:4.5em;
           margin-top: -14em;
-          width:48%;
+          width:45%;
           height:90%;
         }
       }
@@ -173,12 +173,13 @@
       }
       @media (max-width: 775px){
         //margin-bottom:0.3rem;
-        line-height: 14px;
+        //line-height: 14px;
         margin-right:0;
         width: 95%;
-        font-size: 1em;
+        font-size: 0.9em;
         overflow: hidden;
        }
+
        
      }
      footer{
